<resources>
    <string name="keyboard_enter_label">ENTER</string>
    <string name="keyboard_go_label">GO</string>
    <string name="keyboard_search_label">SEARCH</string>
    <string name="keyboard_send_label">SEND</string>
    <string name="keyboard_next_label">NEXT</string>
    <string name="keyboard_done_label">DONE</string>
    <string name="keyboard_space_label">space</string>
    <string name="permission_allow">Allow</string>
    <string name="permission_reject">Don’t Allow</string>
    <string name="permission_enable">Enable</string>
    <string name="permission_enabled">Enabled</string>
    <string name="permission_camera">Will you allow %1$s to use your camera?</string>
    <string name="permission_microphone">Will you allow %1$s to use your microphone?</string>
    <string name="permission_camera_and_microphone">Will you allow %1$s to use your camera and microphone?</string>
    <string name="permission_location">Will you allow %1$s to access your location?</string>
    <string name="permission_notification">Will you allow %1$s to send notifications?</string>
    <string name="permission_read_external_storage">Will you allow %1$s to read your external storage?</string>
    <string name="permission_persistent_storage">Will you allow %1$s to store data in persistent storage?</string>
    <string name="permission_rationale_title">Additional permissions</string>
    <string name="permission_camera_rationale">Taking images of the world around you requires permission to use your camera.</string>
    <string name="permission_microphone_rationale">Conducting voice searches and text input requires permission to use your microphone.</string>
    <string name="permission_camera_and_microphone_rationale">Providing services like videoconferencing requires permission to use your camera and microphone.</string>
    <string name="permission_location_rationale">Offering nearby news and content requires permission to access your location.</string>
    <string name="permission_notification_rationale">Notifying you of news and updates requires permission to send notifications.</string>
    <string name="permission_read_external_storage_rationale">Opening files on your device requires permission to read your external storage.</string>
    <string name="permission_persistent_storage_rationale">Saving and opening files on your device requires permission to store data in persistent storage.</string>
    <string name="settings_crash_reporting">Crash Reporting</string>
    <string name="settings_telemetry">Telemetry</string>
    <string name="settings_privacy_security">Privacy &amp; Security</string>
    <string name="settings_privacy_saved_logins">Saved Logins</string>
    <string name="settings_privacy_logins">Logins And Passwords</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms_service">Terms of Service</string>
    <string name="settings_privacy_search_engine_title">Search engine</string>
    <string name="settings_privacy_choose_search_engine_description">Choose your preferred search engine.</string>
    <string name="settings_privacy_choose_search_engine_reset">Reset Search Engine Settings</string>
    <string name="settings_privacy_policy_popups_title_v1">Exceptions for Pop-Ups</string>
    <string name="settings_privacy_policy_popups_description">You can specify which websites are allowed to open pop-up windows</string>
    <string name="settings_privacy_policy_webxr_title">Virtual Reality permissions</string>
    <string name="settings_privacy_policy_webxr_description">The following sites are blocked from letting WebXR API access your VR device.</string>
    <string name="settings_privacy_policy_webxr_empty_description">When you open a website which uses WebXR, you can open a dialog that lets you to block WebXR on that site.</string>
    <string name="settings_privacy_policy_webxr_reset">Reset the sites not allowed to access Virtual Reality devices.</string>
    <string name="settings_privacy_policy_tracking_title">Exceptions for Enhanced Tracking Protection</string>
    <string name="settings_privacy_policy_tracking_description">You’ve turned off protections on these websites.</string>
    <string name="settings_privacy_policy_tracking_empty_description">When you allow a website to track your activity, they will appear here.</string>
    <string name="settings_privacy_policy_tracking_reset">Reset the Exceptions for Enhanced Tracking Protection.</string>
    <string name="settings_privacy_policy_login_exceptions_title">Login Exceptions</string>
    <string name="settings_privacy_policy_login_exceptions_description">Logins that are not saved will be shown here</string>
    <string name="settings_privacy_policy_login_exceptions_empty_description">Logins that are not saved will be shown here.</string>
    <string name="settings_privacy_policy_login_exceptions_reset">Reset the login exceptions.</string>
    <string name="pop_up_site_switch_allow">Allow</string>
    <string name="pop_up_site_switch_block">Block</string>
    <string name="settings_developer_options">Developer Options</string>
    <string name="settings_fxa_account_sign_in">Sign Into Account</string>
    <string name="settings_fxa_account_manage">Manage Account</string>
    <string name="settings_fxa_account_sign_out">Sign Out</string>
    <string name="settings_fxa_account_reconnect">Reconnect</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_follow_device">Follow device language</string>
    <string name="settings_language_settings">Language Settings</string>
    <string name="settings_language_choose_language_webpage_content">Choose your preferred language for displaying pages</string>
    <string name="settings_language_choose_language_voice_search">Choose your preferred language for voice search</string>
    <string name="settings_language_choose_display_language_title">%1$s Display Language</string>
    <string name="settings_language_choose_language_display_description">Choose the language used to display menus, messages, and notifications.</string>
    <string name="settings_language_choose_language_voice_search_service_title">Voice Search Service</string>
    <string name="settings_language_choose_language_voice_search_service_description">Choose your preferred online service for voice search.</string>
    <string name="settings_language_choose_language_voice_search_title">Voice Search Language</string>
    <string name="settings_language_choose_language_voice_search_description">Choose your preferred language for voice search.</string>
    <string name="settings_language_choose_language_content_title">Preferred Website Languages</string>
    <string name="settings_language_choose_language_content_description">Web pages are sometimes offered in more than one language. Choose the languages you want to display in order of preference to the left side.</string>
    <string name="settings_language_english">English (US)</string>
    <string name="settings_language_english_us">English (US)</string>
    <string name="settings_language_english_uk">English (UK)</string>
    <string name="settings_language_traditional_chinese">Chinese (Traditional/Zhuyin)</string>
    <string name="settings_language_simplified_chinese">Chinese (Simplified/Pinyin)</string>
    <string name="settings_language_japanese">Japanese</string>
    <string name="settings_language_french">French</string>
    <string name="settings_language_galician">Galician</string>
    <string name="settings_language_german">German</string>
    <string name="settings_language_spanish">Spanish</string>
    <string name="settings_language_spanish_spain">Spanish (Spain)</string>
    <string name="settings_language_korean">Korean</string>
    <string name="settings_language_ukrainian">Ukrainian</string>
    <string name="settings_language_italian">Italian</string>
    <string name="settings_language_russian">Russian</string>
    <string name="settings_language_polish">Polish</string>
    <string name="settings_language_danish">Danish</string>
    <string name="settings_language_norwegian">Norwegian</string>
    <string name="settings_language_norwegian_bokmaal">Norwegian (Bokmaal)</string>
    <string name="settings_language_norwegian_nynorsk">Norwegian (Nynorsk)</string>
    <string name="settings_language_swedish">Swedish</string>
    <string name="settings_language_finnish">Finnish</string>
    <string name="settings_language_dutch">Dutch</string>
    <string name="settings_language_thai">Thai</string>
    <string name="settings_language_portuguese">Portuguese</string>
    <string name="settings_language_portuguese_br">Portuguese (Brazil)</string>
    <string name="settings_display">Display</string>
    <string name="settings_controller_options">Controller Options</string>
    <string name="settings_report_speech_data">Report Speech Data</string>
    <string name="settings_report_issue">Report an Issue</string>
    <string name="settings_version_developer">Developer Build</string>
    <string name="settings_help">Help</string>
    <string name="settings_send_your_feedback">Send us Your Feedback</string>
    <string name="settings_accounts_sign_in">Sign in</string>
    <string name="settings_accounts_sign_out">Sign out</string>
    <string name="settings_accounts_reconnect">Reconnect</string>
    <string name="settings_whats_new">What’s New</string>
    <string name="user_feedback_tooltip">Share ideas and feedback</string>
    <string name="clear_user_data_dialog_title">Clear %1$s User Data</string>
    <string name="clear_user_data_dialog_text">%1$s will be reset. All the data, including saved logins, history and bookmarks, will get permanently deleted if haven\'t been synced. %1$s will close automatically after the reset is complete. Do you want to continue?</string>
    <string name="restart_dialog_restart">Restart Required</string>
    <string name="restart_dialog_text">You must restart %1$s in order to complete changes. Would you like to do that now?</string>
    <string name="restart_now_dialog_button">Restart Now</string>
    <string name="restart_later_dialog_button">Restart Later</string>
    <string name="developer_options_curved_display">Enable Curved Display</string>
    <string name="developer_options_center_windows">Center Windows Vertically</string>
    <string name="developer_options_remote_debugging">Enable Remote Debugging</string>
    <string name="display_options_start_with_passthrough">Start with Passthrough Mode</string>
    <string name="display_options_tabs_location">Tabs location</string>
    <string name="display_options_tabs_location_tray">Tray</string>
    <string name="third_party_credits_title">Third-Party Credits</string>
    <string name="third_party_credits_header">FingerDance uses the following third-party environments, licensed under Creative Commons licenses:</string>
    <string name="third_party_credits_license_link">Read the full CC-BY 4.0 license text: https://creativecommons.org/licenses/by/4.0/legalcode</string>
    <string name="third_party_credits_modification_notice">These works have been cropped, compressed, and reformatted as KTX cubemaps for VR display.</string>
    <string name="third_party_credits_disclaimer">Unless otherwise separately undertaken by the Licensor, to the extent possible, the Licensor offers the Licensed Material as-is and as-available, and makes no representations or warranties of any kind concerning the Licensed Material, whether express, implied, statutory, or other. This includes, without limitation, warranties of title, merchantability, fitness for a particular purpose, non-infringement, absence of latent or other defects, accuracy, or the presence or absence of errors, whether or not known or discoverable.</string>
    <string name="third_party_credits_empty_state">No third-party content loaded.</string>
</resources>